# ML_training_suite

./: .gitignore  Dockerfile  Untitled Diagram.drawio  pyproject.toml
example/: main.py  setup.py
ml_training_suite/: base.py  registry.py
ml_training_suite/callbacks/: __init__.py  base.py  metrics.py  premades.py
ml_training_suite/datasets/: __init__.py  base.py  generator.py
ml_training_suite/environments/: __init__.py  base.py
ml_training_suite/models/: __init__.py  base.py  elements.py
ml_training_suite/preprocess/: __init__.py  base.py  features.py  images.py
ml_training_suite/training/: __init__.py  base.py  control.py  supervised.py  unsupervised.py
models/classifier/Classifier1.6/: results.json
tests/: test_datasets.py  test_metrics.py
