[tool.poetry]
name = "ml_training_suite"
version = "0.1.2"
description = ""
authors = ["Mark Zimmerman <mzimm003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
onnx = "*"
onnxruntime = "*"
onnxruntime-gpu = "^1.19.0"
pandas = "*"
pettingzoo = "*"
ray = [
    {version="<2.11", extras=["tune","rllib"], python="<3.9"},
    {version="*", extras=["tune","rllib"], python=">=3.9"}]
scikit-learn = "*"
skl2onnx = "*"
torch = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"