[tool.poetry]
name = "ml_training_suite"
version = "0.1.2"
description = ""
authors = ["Mark Zimmerman <mzimm003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
onnx = "*"
onnxruntime-gpu = "1.19.2"
pandas = "*"
pettingzoo = "*"
pytest = {version = "8.2.1", optional = true}
pytest-benchmark = {version = "*", optional = true}
ray = [
    {version="<2.11", extras=["tune","rllib"], python="<3.9"},
    {version="*", extras=["tune","rllib"], python=">=3.9"}]
scikit-learn = "*"
skl2onnx = "*"
sphinx = {version = "7.1.2", optional = true}
sphinx_design = {version = "*", optional = true}
sphinxcontrib-bibtex = {version = "*", optional = true}
torch = "*"

[tool.poetry.extras]
documentation = ["sphinx", "sphinx_design", "sphinxcontrib-bibtex"]
testing = ["pytest"]
benchmarking = ["pytest-benchmark"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"